# genesetgpt-analyses

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
figures/code/: human-cortex-figures.qmd
notebooks/: spatial_case_study.py  trajectory_case_study.py
